src/css/main.css
body, html {
    margin: 0;
    padding: 0;
    font-family: "Noto Sans", sans-serif;
}
p {
    margin-bottom: 20px;
}
p, strong {
    font-size: 1.1em;
    line-height: 160%;
}

button {
    background: none;
    border: none;
}
.container {
    max-width: 1000px !important;
}
body {
    background: #eee;  
    color: #020202 !important;  
}
h1, h2, h3 {
    font-family: "Oswald", sans-serif;
    letter-spacing: 0.08em;
    text-transform: uppercase;
    /* color: #6F633E; */
}
h2 {
    margin-bottom: 46px !important;
}
section {
    padding-top: 100px;
    position: relative;
}
.link {
    color: rgb(15, 86, 238);
    cursor: pointer;
}
.link:hover {
    text-decoration: underline;
}
/* .texture::before {
    content: "";
    position: absolute;
    top: 0; left: 0;
    width: 100vw; height: 100%;
    background-image: url("../assets/images/dirt-texture.png");
    background-position: left 45%; 
    background-repeat: no-repeat;
    background-size: cover; 
    opacity: 0.5;
} */
.spacer-lg {
    padding-top: 100px;
}
.spacer-md {
    padding-top: 50px;
}
.site-overlay {
    pointer-events: none;
    height: 100vh;
    width: 100vw;
    left: 0;
    top: 0;
    position: fixed;
    background: rgba(0, 0, 0, 0);
    transition: all 0.3s;
}
.site-overlay.is-visible.is-gallery {
    z-index: 4;
    background: rgb(0, 0, 0);
}
.site-overlay.is-visible {
    z-index: 3;
    background: rgba(0, 0, 0, 0.705);
}
.text-shadow {
    text-shadow: -0.08em 0.2em #00000017;
}
.navbar {
    position: fixed;
    z-index: 10;
    width: 100%;
}
.navbar-nav {
    margin: auto !important;
    font-size: 0.9em;
    
}
.navbar-toggler {
    border: 0;
}
.menu-mobile {
    position: fixed;
    display: none;
    font-size: 14px;
    padding-top: 8px;
    padding-bottom: 10px;
    z-index: 6;
    width: 100%;
}
.menu-mobile .nav-link {
    color: #eee;
}
.menu-mobile.is-visible {
    display: block;
}
@media (min-width: 990px) {
    .menu-mobile {
        display: none !important;
    }
}
.nav {
    background: #151515;
    font-family: "Oswald", sans-serif;
    letter-spacing: 0.08em;
    text-transform: uppercase;
}
.text-bold {
    font-weight: bold;
}
.icon {
    width: 20px;
    height: 20px;
    margin: auto 8px auto 0;
}
.icon-md {
    width: 22px;
    height: 22px;
    margin: auto 8px auto 0;
    cursor: pointer;
}
.logo-icon {
    height: 40px;
    width: 40px;
}
.nav-link {
    padding-right: 20px !important;
}
.social-icons img{
    opacity: 0.6;
}
.social-icons img:hover {
    opacity: 1;
}
.font-smaller {
    font-size: 1em;
}
.hero__button-container {
    margin-top: 28px;
}
.button {
    transition: all 0.1s ease-in-out;
    font-family: "Oswald", sans-serif;
    font-size: 1.1em;
    letter-spacing: 0.08em;
    border: 0;
    background: none;
    padding: 10px 28px;
}
.button-close {
    position: absolute;
    right: 50px;
    width: 24px;
    height: 24px;
    margin: 0 0 16px auto;
    padding: 0;
}

.button-cta {
    color: white;
    background: #958860;
}
.button-cta:hover {
    background: #63593c;
}
.button-outline {
    box-sizing: border-box;
    color: #EEE;
    border: 2px solid #BBBBBB;
}
.button-outline:hover {
    color: rgb(29, 29, 29);
    background: #ddd;
    border: 2px solid #ddd;
}
.button-form {
    width: 100%;
    background: #A6A6A6;
    text-transform: uppercase;
    font-weight: bold;
}
.button-form:hover {
    background: rgb(146, 146, 146);
}
.input {
    min-height: 40px;
    width: 100%;
    background: #121212;
    color: #eee;
    border: 0;
    margin-bottom: 16px;
}
.input {
    padding-left: 8px;
    padding-right: 8px;
}

/* CUSTOM CHECKBOX */
/* Hide the browser's default checkbox */
.checkbox-container {
    display: block;
    position: relative;
    padding-left: 35px;
    margin-bottom: 16px;
    cursor: pointer;
    -webkit-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    user-select: none;
  }

.checkbox-container input {
    position: absolute;
    opacity: 0;
    cursor: pointer;
    height: 0;
    width: 0;
    border: 1px solid #666 !important;
    background: #ddd !important;
  }
  
  /* Create a custom checkbox */
  .checkmark {
    position: absolute;
    top: 0;
    left: 0;
    height: 25px;
    width: 25px;
    background-color: #ccc;
  }
  
  /* On mouse-over, add a grey background color */
  .checkbox-container:hover input ~ .checkmark {
    background-color: rgb(175, 175, 175);
  }
  
  /* When the checkbox is checked, add a blue background */
  .checkbox-container input:checked ~ .checkmark {
    background-color: #63593c;
  }
  
  /* Create the checkmark/indicator (hidden when not checked) */
  .checkmark:after {
    content: "";
    position: absolute;
    display: none;
  }
  
  /* Show the checkmark when checked */
  .checkbox-container input:checked ~ .checkmark:after {
    display: block;
  }
  
  /* Style the checkmark/indicator */
  .checkbox-container .checkmark:after {
    left: 9px;
    top: 5px;
    width: 5px;
    height: 10px;
    border: solid white;
    border-width: 0 3px 3px 0;
    -webkit-transform: rotate(45deg);
    -ms-transform: rotate(45deg);
    transform: rotate(45deg);
  }
  /* CUSTOM CHECKBOX END */
.hero {
    color: white;
    /* height: 85vh; */
    height: 85vh;
    position: relative;
}
.sample-caption {
    opacity: 0.8;
    font-size: 12px;
}
.audio-caption {
    
}
.sample__youtube {
    width: 90%;
    margin: auto;
}
.hero::before {
    content: "";
    position: absolute;
    top: 0; left: 0;
    width: 100%; height: 100%;
    background-image: url("../assets/images/studio/Image9.jpg");
    background-position: left 51%; 
    background-repeat: no-repeat;
    background-size: cover; 
    background-attachment: fixed;
    /* filter: grayscale(50%) contrast(140%) brightness(102%); */
    filter: grayscale(100%) contrast(80%) brightness(122%);
    /* filter: grayscale(10%) contrast(90%) brightness(120%); */
}
/* ... */

